# pm

./: .gitignore  .gitmodules  BACKEND_TEMPLATE_STANDARD.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.manual  Dockerfile.test  Makefile  PM_PLUGIN.md  README.md  SPEC.md  build.rs  docker-compose.yml  docker-entrypoint.sh  prd.md
.cargo/: config.toml
.claude/: settings.json
.github/workflows/: release.yml  rust-ci.yml  rust-npm-publish-local.yml  rust-npm-publish-local.yml.backup
LICENSES/: github-gitignore-CC0.txt
actions/actions/npm-publish/: action.yml
benches/: pm_benchmarks.rs
configs/: manifest.yaml
configs/dart/common/: .gitignore  analysis_options.yaml  manifest.yaml
configs/dart/flutter/: .gitignore  .gitignore.extra  manifest.yaml
configs/python/common/: .gitignore  manifest.yaml  pyproject.toml  ruff.toml
configs/python/fastapi/: .dockerignore  .gitignore.extra  Dockerfile  manifest.yaml
configs/rust/axum/: .dockerignore  Dockerfile
configs/rust/clap/: manifest.yaml
configs/rust/common/: clippy.toml  manifest.yaml
configs/shared/: .editorconfig  manifest.yaml
configs/ts/common/: manifest.yaml  tsconfig.json
configs/ts/nestjs/: Dockerfile  manifest.yaml
configs/ts/nextjs/: .gitignore.extra  .npmrc  manifest.yaml
configs/typescript/nestjs/: .dockerignore
configs/typescript/nextjs/: .dockerignore  Dockerfile  manifest.yaml
docs/: DOCKER_DEVELOPMENT.md  TESTING_GUIDE.md  project.md
npm/: package-lock.json  package.json
npm/scripts/: download-binary.js
npm/src/: cli.ts  install.ts
openspec/changes/local-dev-orchestrator/: design.md  tasks.md
openspec/changes/richer-bundled-templates/: design.md  tasks.md
script/: cargo-integration.sh  dev-build.sh  dev-init.sh  dev-setup.sh  dev-shell.sh  run-e2e-tests.sh  test-coverage.sh  test-docker.sh
scripts/: install-skills-plugin.sh
src/: cli.rs  config.rs  display.rs  error.rs  git.rs  history.rs  lib.rs  log_rotation.rs  main.rs  models.rs  path.rs  plugin.rs  proj.rs  project.rs  restore.rs  routes.rs  services.rs  shell_integration.rs  state.rs  utils.rs
src/commands/: add.rs  check.rs  completion.rs  db.rs  history.rs  init.rs  list.rs  logs.rs  manifest.rs  mod.rs  orchestrator.rs  path.rs  plugin.rs  ports.rs  proj.rs  project.rs  remove.rs  repo.rs  run.rs  stop.rs  switch.rs  sync.rs  upgrade.rs  use_ws.rs  workspace.rs
src/templates/: embedded.rs  legacy.rs  marker.rs  mod.rs  synthesize.rs
tests/: integration_tests.rs
(+20 files in other folders)
