[package]
name = "pm"
version = "0.3.0"
edition = "2024"
description = "Git project directory manager"
authors = ["x"]
license = "MIT"

[dependencies]
# CLI Framework
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Git Operations
git2 = "0.20"
openssl = { version = "0.10", features = ["vendored"], optional = true }

# Error Handling
anyhow = "1.0"
thiserror = "2.0"

# Directories & Paths
dirs = "6.0"
shellexpand = "3.1"

# Output & Formatting
colored = "2.0"
tabled = "0.20"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# Interactive Prompts
dialoguer = "0.11"

# Diff
similar = "2.6"

# Utilities
regex = "1.11"
walkdir = "2.5"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "pm"
path = "src/main.rs"

[[bin]]
name = "pmd"
path = "src/main.rs"
